# hf-cli-web-ui

./: .gitignore  AGENTS.md  Dockerfile  README.md  debug_cache.py  debug_cache_structure.py  run.sh  settings.json  setup_backend.sh  test_api_module.py  test_backend.py  test_backend_integration.py  test_backend_modular_structure.py  test_backend_simple.py  test_backend_start.py  test_backend_unit.py  test_comprehensive.py  test_integration.py  test_static_assets.py  update_version.sh
.github/workflows/: docker-build-reusable.yml  docker-build.yml  release-with-docker-build.yml  release.yml
backend/: app.py  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  cache.py  downloads.py
backend/hf_cli_web_ui_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/utils/: formatting.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: RemoveRepositoryButton.tsx
frontend/src/features/cache/: App.tsx
frontend/src/types/: cache.ts
