[project]
name = "hf-cli-web-ui-backend"
version = "0.0.5"
description = "Backend for Hugging Face CLI Cache Manager"
authors = [{name = "Peter", email = "peter@example.com"}]
dependencies = [
    "flask==2.3.3",
    "huggingface_hub>=0.19.0,<0.20.0",
    "flask-cors>=4.0.0,<5.0.0",
    "psutil>=5.9.5,<6.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]